Fixed spacing at bottom of shopping cart page

--- a/src/App.css
+++ b/src/App.css
@@ -172,6 +172,7 @@ button:active {
   flex-direction: column;
   gap: 20px;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .cart--item {
